force-app/main/default/objects/Divestiture_Site__c/Divestiture_Site__c.object-meta.xml
<CustomObject>
    <description>Tracks site information related to the Divestiture Program.</description>
    <label>Divestiture Site</label>
    <nameField>
        <label>Divestiture Site ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Divestiture Sites</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>