force-app/main/default/objects/Divestiture_Site__c/fields/Active_for_Divestiture_Program__c.field-meta.xml
<CustomField>
    <fullName>Active_for_Divestiture_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This site is being actively tracked as part of the Divestiture Program.</inlineHelpText>
    <label>Active for Divestiture Program</label>
    <type>Checkbox</type>
</CustomField>