force-app/main/default/objects/Divestiture_Site__c/fields/ADM_Region_Disposition__c.field-meta.xml
<CustomField>
    <fullName>ADM_Region_Disposition__c</fullName>
    <description>List Project: BVELU: 02/23/2021</description>
    <label>ADM Region Disposition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>