force-app/main/default/objects/Divestiture_Site__c/fields/ADM_RegionSignOff_Date__c.field-meta.xml
<CustomField>
    <fullName>ADM_RegionSignOff_Date__c</fullName>
    <description>List Project: BVELU: 02/23/2021</description>
    <label>ADM RegionSignOff Date</label>
    <type>Date</type>
</CustomField>