force-app/main/default/objects/Divestiture_Site__c/fields/By_Pass_Validation__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Pass Validation</label>
    <type>Checkbox</type>
</CustomField>