force-app/main/default/objects/Divestiture_Site__c/fields/Create_Due_Dilligence__c.field-meta.xml
<CustomField>
    <fullName>Create_Due_Dilligence__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to create a Due Diligence package for the site.</inlineHelpText>
    <label>Create Due Dilligence</label>
    <type>Checkbox</type>
</CustomField>