force-app/main/default/objects/Divestiture_Site__c/fields/Dark_Fiber_Site__c.field-meta.xml
<CustomField>
    <fullName>Dark_Fiber_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dark Fiber Site</label>
    <type>Checkbox</type>
</CustomField>