force-app/main/default/objects/Divestiture_Site__c/fields/Date_Exception_Letter_Sent_to_Dish__c.field-meta.xml
<CustomField>
    <fullName>Date_Exception_Letter_Sent_to_Dish__c</fullName>
    <label>Date Exception Letter Sent to Dish</label>
    <type>Date</type>
</CustomField>