force-app/main/default/objects/Divestiture_Site__c/fields/Date_is_locked_NOD_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_is_locked_NOD_Issued__c</fullName>
    <formula>IF(  ISBLANK(  Notice_of_Decom_NOD__c   ) , 
FALSE,
TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checkbox that is checked once a the Notice of Decom has been issued for this site.</inlineHelpText>
    <label>Date is locked (NOD Issued)</label>
    <type>Checkbox</type>
</CustomField>