force-app/main/default/objects/Divestiture_Site__c/fields/Date_Loaded_to_Intralinks_Original__c.field-meta.xml
<CustomField>
    <fullName>Date_Loaded_to_Intralinks_Original__c</fullName>
    <label>Date Loaded to Intralinks Original</label>
    <type>Date</type>
</CustomField>