force-app/main/default/objects/Divestiture_Site__c/fields/Date_NOD_DD_Package_Retired_Intralinks__c.field-meta.xml
<CustomField>
    <fullName>Date_NOD_DD_Package_Retired_Intralinks__c</fullName>
    <label>Date NOD &amp; DD Package Retired Intralinks</label>
    <type>Date</type>
</CustomField>