force-app/main/default/objects/Divestiture_Site__c/fields/Date_Option_Expired_30_Days_for_Archiv__c.field-meta.xml
<CustomField>
    <fullName>Date_Option_Expired_30_Days_for_Archiv__c</fullName>
    <inlineHelpText>Tracking for when files can be removed from Intralinks.</inlineHelpText>
    <label>Dish Documents Ready for Retirement</label>
    <type>Date</type>
</CustomField>