force-app/main/default/objects/Divestiture_Site__c/fields/Date_Revised_NOD_Sent_to_Dish__c.field-meta.xml
<CustomField>
    <fullName>Date_Revised_NOD_Sent_to_Dish__c</fullName>
    <label>Date Revised NOD Sent to Dish</label>
    <type>Date</type>
</CustomField>