force-app/main/default/objects/Divestiture_Site__c/fields/Days_until_NOD__c.field-meta.xml
<CustomField>
    <fullName>Days_until_NOD__c</fullName>
    <formula>Notice_of_Decom_NOD__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated number of days from Today until the Notice of Decommsion Date.</inlineHelpText>
    <label>Days until NOD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>