force-app/main/default/objects/Divestiture_Site__c/fields/Days_Until_RF_Locking_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_RF_Locking_Date__c</fullName>
    <formula>(Forecasted_Logical_Decommission_Date__c -180)- TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Days before the RF Locking Date (180 days before the Forecasted Off Air date)</inlineHelpText>
    <label>Days Until RF Locking Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>