force-app/main/default/objects/Divestiture_Site__c/fields/Days_until_RF_Shut__c.field-meta.xml
<CustomField>
    <fullName>Days_until_RF_Shut__c</fullName>
    <formula>Forecasted_Logical_Decommission_Date__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days until the RF Shutdown Date.</inlineHelpText>
    <label>Days until forcasted  RF Shutdown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>