force-app/main/default/objects/Divestiture_Site__c/fields/Decomm_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Decomm_Reason_Code__c</fullName>
    <description>List Project: BVELU: 02/23/2021</description>
    <label>Decomm Reason Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>