force-app/main/default/objects/Divestiture_Site__c/fields/Decon_PM_Email__c.field-meta.xml
<CustomField>
    <fullName>Decon_PM_Email__c</fullName>
    <description>Hidden from Page layout autofilled by a process to support email alert</description>
    <label>Decon PM Email</label>
    <type>Email</type>
</CustomField>