force-app/main/default/objects/Divestiture_Site__c/fields/Deconstruction_Team__c.field-meta.xml
<CustomField>
    <fullName>Deconstruction_Team__c</fullName>
    <description>DO NOT CHANGE THIS FIELD WITHOUT TALKING TO ROGERS&quot;</description>
    <label>Responsible for Physical Decom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Region/Market</fullName>
            </value>
            <value>
                <fullName>Lease Only</fullName>
            </value>
            <value>
                <fullName>National - Lease Only w/Equipment</fullName>
            </value>
            <value>
                <fullName>Region/Market - Lease Only w/Equipment</fullName>
            </value>
            <value>
                <fullName>Mobilitie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>