force-app/main/default/objects/Divestiture_Site__c/fields/Dish_Option_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Dish_Option_Record_ID__c</fullName>
    <description>Hidden field updated by a process when Dish Option created.</description>
    <label>Dish Option Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>