force-app/main/default/objects/Divestiture_Site__c/fields/Drop_Dead_Physical_Decom_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Dead_Physical_Decom_Date__c</fullName>
    <label>Drop Dead Physical Decom Date</label>
    <type>Date</type>
</CustomField>