force-app/main/default/objects/Divestiture_Site__c/fields/Enter_Forced_Relo_Comments_Max_240__c.field-meta.xml
<CustomField>
    <fullName>Enter_Forced_Relo_Comments_Max_240__c</fullName>
    <inlineHelpText>Enter comments about the Forced Relocation and they will appear below. Cannot be more than 240 characters. Make multiple entries if more text is needed.</inlineHelpText>
    <label>Enter Forced Relo Comments (Max 240)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>