force-app/main/default/objects/Divestiture_Site__c/fields/Enter_Team_Comments_Max_255__c.field-meta.xml
<CustomField>
    <fullName>Enter_Team_Comments_Max_255__c</fullName>
    <inlineHelpText>Enter comments you  want available for the Leasing/Decom Teams here.  Cannot be more than 240 characters. Make multiple entries if more text is needed.</inlineHelpText>
    <label>Enter Team Comments (Max 240)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>