force-app/main/default/objects/Divestiture_Site__c/fields/Exception_Letter_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Letter_Reason__c</fullName>
    <label>Exception Letter Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>