force-app/main/default/objects/Divestiture_Site__c/fields/Exception_Letter_Sent_To_Dish__c.field-meta.xml
<CustomField>
    <fullName>Exception_Letter_Sent_To_Dish__c</fullName>
    <label>Exception Letter Sent To Dish</label>
    <length>100</length>
    <type>Text</type>
</CustomField>