force-app/main/default/objects/Divestiture_Site__c/fields/Forced_Relocation__c.field-meta.xml
<CustomField>
    <fullName>Forced_Relocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DO NOT CHANGE THIS FIELD WITHOUT TALKING TO ROGERS&quot;</description>
    <label>Forced Removal</label>
    <type>Checkbox</type>
</CustomField>