force-app/main/default/objects/Divestiture_Site__c/fields/Forced_Relocation_Code__c.field-meta.xml
<CustomField>
    <fullName>Forced_Relocation_Code__c</fullName>
    <description>DO NOT CHANGE THIS FIELD WITHOUT TALKING TO ROGERS&quot;</description>
    <label>Forced Removal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>