force-app/main/default/objects/Divestiture_Site__c/fields/Forced_Removal_Comment_History__c.field-meta.xml
<CustomField>
    <fullName>Forced_Removal_Comment_History__c</fullName>
    <inlineHelpText>Enter comments about Forced Removals above.</inlineHelpText>
    <label>Forced Removal Comment History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>