force-app/main/default/objects/Divestiture_Site__c/fields/Forecasted_Deconstruction_Complete__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Deconstruction_Complete__c</fullName>
    <formula>Site_Deconstruction__r.DX_Complete_Forecast__c</formula>
    <inlineHelpText>DX Complete Forecast field from Deconstruction team</inlineHelpText>
    <label>Forecasted Deconstruction Complete</label>
    <type>Date</type>
</CustomField>