force-app/main/default/objects/Divestiture_Site__c/fields/Forecasted_Deconstruction_Start__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Deconstruction_Start__c</fullName>
    <formula>Site_Deconstruction__r.DX_Start_Forecast__c</formula>
    <inlineHelpText>DX Start Forecast date from the deconstruction team</inlineHelpText>
    <label>Forecasted Deconstruction Start</label>
    <type>Date</type>
</CustomField>