force-app/main/default/objects/Divestiture_Site__c/fields/Forecasted_Logical_Decommission_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Logical_Decommission_Date__c</fullName>
    <inlineHelpText>Also referred to as the Forecasted Logical Decommission Date</inlineHelpText>
    <label>RF Shutdown Forecast Date</label>
    <type>Date</type>
</CustomField>