force-app/main/default/objects/Divestiture_Site__c/fields/FR_Post_7_1_List_Notes__c.field-meta.xml
<CustomField>
    <fullName>FR_Post_7_1_List_Notes__c</fullName>
    <inlineHelpText>Imported from latest master list.</inlineHelpText>
    <label>FR Post 7/1 List Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>