force-app/main/default/objects/Divestiture_Site__c/fields/From_Descionator__c.field-meta.xml
<CustomField>
    <fullName>From_Descionator__c</fullName>
    <inlineHelpText>ADM_JustificationComments &amp; ADM_RF_Justification</inlineHelpText>
    <label>From Descionator</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>