force-app/main/default/objects/Divestiture_Site__c/fields/Harvest_Site__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Harvest Site</label>
    <type>Checkbox</type>
</CustomField>