force-app/main/default/objects/Divestiture_Site__c/fields/Lat_Long__c.field-meta.xml
<CustomField>
    <fullName>Lat_Long__c</fullName>
    <label>Lat/Long</label>
    <scale>12</scale>
    <type>Location</type>
</CustomField>