force-app/main/default/objects/Divestiture_Site__c/fields/Lease_Doc_Status__c.field-meta.xml
<CustomField>
    <fullName>Lease_Doc_Status__c</fullName>
    <inlineHelpText>Has the lease been provided to Dish?</inlineHelpText>
    <label>Lease Doc Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>