force-app/main/default/objects/Divestiture_Site__c/fields/Lease_Only__c.field-meta.xml
<CustomField>
    <fullName>Lease_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lease Only</label>
    <type>Checkbox</type>
</CustomField>