force-app/main/default/objects/Divestiture_Site__c/fields/Leasing_Decom_Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Decom_Team_Comments__c</fullName>
    <label>Leasing/Decom Team Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>