force-app/main/default/objects/Divestiture_Site__c/fields/Legacy_Company__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Company__c</fullName>
    <label>Legacy Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clearwire</fullName>
            </value>
            <value>
                <fullName>Metro PCS</fullName>
            </value>
            <value>
                <fullName>Network Vision</fullName>
            </value>
            <value>
                <fullName>Shentel</fullName>
            </value>
            <value>
                <fullName>Swiftel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>