force-app/main/default/objects/Divestiture_Site__c/fields/Legacy_Sprint_Market__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Sprint_Market__c</fullName>
    <label>Legacy Sprint Market</label>
    <length>100</length>
    <type>Text</type>
</CustomField>