force-app/main/default/objects/Divestiture_Site__c/fields/Line_Comments__c.field-meta.xml
<CustomField>
    <fullName>Line_Comments__c</fullName>
    <label>Line Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>