force-app/main/default/objects/Divestiture_Site__c/fields/Market_Legacy_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Market_Legacy_Sprint__c</fullName>
    <description>List Project: BVELU: 02/28/2021</description>
    <label>Market (Legacy Sprint)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>