force-app/main/default/objects/Divestiture_Site__c/fields/Metro_PCS_Clearwire__c.field-meta.xml
<CustomField>
    <fullName>Metro_PCS_Clearwire__c</fullName>
    <label>Metro PCS / Clearwire</label>
    <length>32</length>
    <type>Text</type>
</CustomField>