force-app/main/default/objects/Divestiture_Site__c/fields/Moved_NOD_Issue_plus_1__c.field-meta.xml
<CustomField>
    <fullName>Moved_NOD_Issue_plus_1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Adjusts by 1 day to account for lists on the last day of the prior month.</inlineHelpText>
    <label>NOD Issue Month</label>
    <type>Checkbox</type>
</CustomField>