force-app/main/default/objects/Divestiture_Site__c/fields/NOD_DD_Package_Retired_from_Intralinks__c.field-meta.xml
<CustomField>
    <fullName>NOD_DD_Package_Retired_from_Intralinks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Records are no longer available in Intralinks. Salesforce Records remain.</inlineHelpText>
    <label>NOD &amp; DD Package Retired from Intralinks</label>
    <type>Checkbox</type>
</CustomField>