force-app/main/default/objects/Divestiture_Site__c/fields/NOD_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>NOD_Issue_Date__c</fullName>
    <inlineHelpText>Date the Notice of Decom was issued to Dish.  Starts the 180 day clock.</inlineHelpText>
    <label>NOD Issue Date</label>
    <type>Date</type>
</CustomField>