force-app/main/default/objects/Divestiture_Site__c/fields/NOD_Issue_Date_FirstTime__c.field-meta.xml
<CustomField>
    <fullName>NOD_Issue_Date_FirstTime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if NOD Issue Date Entered First Time</description>
    <inlineHelpText>To check if NOD Issue Date Entered First Time</inlineHelpText>
    <label>NOD Issue Date FirstTime</label>
    <type>Checkbox</type>
</CustomField>