force-app/main/default/objects/Divestiture_Site__c/fields/NOD_Issue_Date_Plus_180__c.field-meta.xml
<CustomField>
    <fullName>NOD_Issue_Date_Plus_180__c</fullName>
    <formula>NOD_Issue_Date__c  + 180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Final Day to decom site (dependent on Dish option and extension. Calculated as NOD Issue Date + 180 Days</inlineHelpText>
    <label>NOD Issue Date Plus 180</label>
    <type>Date</type>
</CustomField>