force-app/main/default/objects/Divestiture_Site__c/fields/NOD_Issue_Month__c.field-meta.xml
<CustomField>
    <fullName>NOD_Issue_Month__c</fullName>
    <formula>IF( Moved_NOD_Issue_plus_1__c = TRUE,
 NOD_Issue_Date__c + 1, 
  NOD_Issue_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOD Issue Month</label>
    <type>Date</type>
</CustomField>