force-app/main/default/objects/Divestiture_Site__c/fields/NOD_Plus_120__c.field-meta.xml
<CustomField>
    <fullName>NOD_Plus_120__c</fullName>
    <formula>NOD_Issue_Date__c  + 120</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dish Binding Option End Date. Calculated as NOD Issue Date + 120 Days</inlineHelpText>
    <label>NOD Issue Date Plus 120</label>
    <type>Date</type>
</CustomField>