force-app/main/default/objects/Divestiture_Site__c/fields/NOD_Plus_60__c.field-meta.xml
<CustomField>
    <fullName>NOD_Plus_60__c</fullName>
    <formula>NOD_Issue_Date__c + 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dish Non-binding Option End Date. Calculated as NOD Issue Date + 60 Days</inlineHelpText>
    <label>NOD Issue Date Plus 60</label>
    <type>Date</type>
</CustomField>