force-app/main/default/objects/Divestiture_Site__c/fields/Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comments__c</fullName>
    <inlineHelpText>For example, if site is forced relocation.</inlineHelpText>
    <label>Notes/Comments</label>
    <length>249</length>
    <type>Text</type>
</CustomField>