force-app/main/default/objects/Divestiture_Site__c/fields/Notice_of_Decom_NOD__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_Decom_NOD__c</fullName>
    <inlineHelpText>The decommission date of the site that has been shared with Dish.The date is locked when Dish is notified.</inlineHelpText>
    <label>Notice of Decom (NOD)</label>
    <type>Date</type>
</CustomField>