force-app/main/default/objects/Divestiture_Site__c/fields/Off_Air_Date_From_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Off_Air_Date_From_Source_System__c</fullName>
    <label>Off Air Date From Source System</label>
    <type>Date</type>
</CustomField>