force-app/main/default/objects/Divestiture_Site__c/fields/Physical_Decom_Date_Complete__c.field-meta.xml
<CustomField>
    <fullName>Physical_Decom_Date_Complete__c</fullName>
    <inlineHelpText>Date the Physical Decom is Complete. Comes from Sprint Vision or ElemenT</inlineHelpText>
    <label>Physical Decom Date (Complete)</label>
    <type>Date</type>
</CustomField>