force-app/main/default/objects/Divestiture_Site__c/fields/Physical_Decommsion_Date_from_Source_Sys__c.field-meta.xml
<CustomField>
    <fullName>Physical_Decommsion_Date_from_Source_Sys__c</fullName>
    <inlineHelpText>Forecasted Physical Decommision Date from Sprint Vision or ElemenT</inlineHelpText>
    <label>Physical Decommsion Date (Source System)</label>
    <type>Date</type>
</CustomField>