force-app/main/default/objects/Divestiture_Site__c/fields/Physical_Shutdown_Forecast_Date__c.field-meta.xml
<CustomField>
    <fullName>Physical_Shutdown_Forecast_Date__c</fullName>
    <label>Physical Shutdown Forecast Date</label>
    <type>Date</type>
</CustomField>