force-app/main/default/objects/Divestiture_Site__c/fields/POR_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>POR_Plan_Status__c</fullName>
    <description>List Project: BVELU: 02/23/2021</description>
    <label>POR Plan Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>