force-app/main/default/objects/Divestiture_Site__c/fields/POR_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>POR_Project_ID__c</fullName>
    <inlineHelpText>Updated from source systems</inlineHelpText>
    <label>POR Project ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>