force-app/main/default/objects/Divestiture_Site__c/fields/Prior_30_Day_Physical_Decon_Date_Move__c.field-meta.xml
<CustomField>
    <fullName>Prior_30_Day_Physical_Decon_Date_Move__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If a 30 day extenstion for the Physical Deconstruction has already been approved, another request must go through the approval process.</inlineHelpText>
    <label>Prior 30 Day Physical Decon Date Move</label>
    <type>Checkbox</type>
</CustomField>