force-app/main/default/objects/Divestiture_Site__c/fields/Prior_RF_Site_Lists__c.field-meta.xml
<CustomField>
    <fullName>Prior_RF_Site_Lists__c</fullName>
    <label>Prior RF Site Lists</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>