force-app/main/default/objects/Divestiture_Site__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>For Due Diligence Packages</inlineHelpText>
    <label>Due Diligence Priority</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>