force-app/main/default/objects/Divestiture_Site__c/fields/Quarters_Until_Close__c.field-meta.xml
<CustomField>
    <fullName>Quarters_Until_Close__c</fullName>
    <formula>CEILING(MONTH( Physical_Decom_Date_Complete__c ) / 3 ) - CEILING(MONTH( TODAY() ) / 3 ) +
((YEAR( Physical_Decom_Date_Complete__c ) - YEAR( TODAY() )) * 4 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarters Until Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>