force-app/main/default/objects/Divestiture_Site__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>T-Mobile Region</inlineHelpText>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>