force-app/main/default/objects/Divestiture_Site__c/fields/Rent_Range__c.field-meta.xml
<CustomField>
    <fullName>Rent_Range__c</fullName>
    <label>Rent Range</label>
    <length>100</length>
    <type>Text</type>
</CustomField>