force-app/main/default/objects/Divestiture_Site__c/fields/Rescinded_Offer__c.field-meta.xml
<CustomField>
    <fullName>Rescinded_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rescinded Offer</label>
    <type>Checkbox</type>
</CustomField>