force-app/main/default/objects/Divestiture_Site__c/fields/Revised_NOD_Sent_to_Dish__c.field-meta.xml
<CustomField>
    <fullName>Revised_NOD_Sent_to_Dish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revised NOD Sent to Dish</label>
    <type>Checkbox</type>
</CustomField>