force-app/main/default/objects/Divestiture_Site__c/fields/RF_Forecast_Month__c.field-meta.xml
<CustomField>
    <fullName>RF_Forecast_Month__c</fullName>
    <formula>CASE(MONTH( Forecasted_Logical_Decommission_Date__c ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)&amp; &quot; &quot; &amp; TEXT(YEAR( Forecasted_Logical_Decommission_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RF Forecast Month</label>
    <type>Text</type>
</CustomField>