force-app/main/default/objects/Divestiture_Site__c/fields/RF_List_Reason_for_Override__c.field-meta.xml
<CustomField>
    <fullName>RF_List_Reason_for_Override__c</fullName>
    <label>RF List Reason for Override</label>
    <type>TextArea</type>
</CustomField>