force-app/main/default/objects/Divestiture_Site__c/fields/RF_Shutdown_Date_Complete__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Date_Complete__c</fullName>
    <inlineHelpText>Date the RF Shutdown is Complete.  Comes from Sprint Vision or ElemenT.</inlineHelpText>
    <label>RF Shutdown Date (Complete)</label>
    <type>Date</type>
</CustomField>