force-app/main/default/objects/Divestiture_Site__c/fields/RF_Shutdown_Date_is_Locked__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Date_is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates Site was on an RF List to dish at 180 days or less</inlineHelpText>
    <label>RF Shutdown Date is Locked</label>
    <type>Checkbox</type>
</CustomField>