force-app/main/default/objects/Divestiture_Site__c/fields/RF_Shutdown_Forecast_Date_from_Source_Sy__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Forecast_Date_from_Source_Sy__c</fullName>
    <inlineHelpText>The currrent Forecasted Logical Decommsion Date from Sprint Vision or ElemenT.</inlineHelpText>
    <label>RF Shutdown Forecast Date(Source System)</label>
    <type>Date</type>
</CustomField>