force-app/main/default/objects/Divestiture_Site__c/fields/Site_Class__c.field-meta.xml
<CustomField>
    <fullName>Site_Class__c</fullName>
    <description>List Project: BVELU: 02/28/2021</description>
    <label>Site Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>