force-app/main/default/objects/Divestiture_Site__c/fields/Site_Deconstruction__c.field-meta.xml
<CustomField>
    <fullName>Site_Deconstruction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Deconstruction</label>
    <referenceTo>Site_Decommission__c</referenceTo>
    <relationshipLabel>Divestiture Sites</relationshipLabel>
    <relationshipName>Divestiture_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>