force-app/main/default/objects/Divestiture_Site__c/fields/Site_Deconstruction_Record_Exists__c.field-meta.xml
<CustomField>
    <fullName>Site_Deconstruction_Record_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for behind he scene processes</inlineHelpText>
    <label>Site Deconstruction Record Exists</label>
    <type>Checkbox</type>
</CustomField>