force-app/main/default/objects/Divestiture_Site__c/fields/Site_has_Multiple_Leases__c.field-meta.xml
<CustomField>
    <fullName>Site_has_Multiple_Leases__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field will be checked if the Divestiture Site has Multiple Leases Abstracts &gt; 1</description>
    <label>Site has Multiple Leases</label>
    <type>Checkbox</type>
</CustomField>