force-app/main/default/objects/Divestiture_Site__c/fields/Site_Previously_Decommsioned__c.field-meta.xml
<CustomField>
    <fullName>Site_Previously_Decommsioned__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the site Physically Decommsiioned prior to notice being sent to Dish.</inlineHelpText>
    <label>Site Previously Decommsioned</label>
    <type>Checkbox</type>
</CustomField>